--- a/css/style.css
+++ b/css/style.css
@@ -55,10 +55,12 @@ container {
 #workGrid {
   display: grid;
   flex-direction: row;
- justify-content: left;
-border: 5px solid black;
+  justify-content: center;
 }
 
+.project{
+  display: inline-block;
+}
 
 
 
